[package]
name = "beeline"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
beeminder-rs = { git = "https://github.com/felixmde/beeminder-rs.git", branch = "main" }
colored = "^2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "^0.3"
tempfile = "3.16"
time = { version = "0.3", features = ["serde", "macros", "local-offset"] }
tokio = { version = "^1.42", features = ["full"] }
